--- a/src/less/code.less
+++ b/src/less/code.less
@@ -280,7 +280,11 @@ code {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 4px 20px;
+    padding: 7px 14px;
+    margin: 0 -17px 15px;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
   }
 }
 
@@ -344,7 +348,11 @@ code {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 4px 20px;
+    padding: 7px 14px;
+    margin: 0 -17px 15px;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
   }
 }
 
@@ -362,7 +370,11 @@ code {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 4px 20px;
+    padding: 7px 14px;
+    margin: 0 -17px 15px;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
   }
 }
 
@@ -381,7 +393,11 @@ code {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 4px 20px;
+    padding: 7px 14px;
+    margin: 0 -17px 15px;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
   }
 }
 
@@ -399,7 +415,11 @@ code {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 4px 20px;
+    padding: 7px 14px;
+    margin: 0 -17px 15px;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
   }
 }
 
@@ -417,7 +437,11 @@ code {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 4px 20px;
+    padding: 7px 14px;
+    margin: 0 -17px 15px;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
   }
 }
 
@@ -435,6 +459,10 @@ code {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 4px 20px;
+    padding: 7px 14px;
+    margin: 0 -17px 15px;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
   }
 }
