--- a/src/less/code.less
+++ b/src/less/code.less
@@ -21,7 +21,7 @@ pre {
   }
 
   span {
-    display: inline-block;
+    display: block;
   }
 }
 
@@ -73,18 +73,19 @@ code {
     height: auto;
     background: #121925;
     content: "Python";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    /*
-    margin-left: calc(~"-50vw + 50%") !important;
-    margin-right: calc(~"-50vw + 50%") !important;*/
+    position: relative;
     top: 0;
     left: 0;
-    padding: 4px 20px;
+    padding: 7px 4%;
+    margin: 0 -17px 15px;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
   }
   /*
   &::before  {
@@ -209,15 +210,19 @@ code {
     height: auto;
     background: #121925;
     content: "Javascript";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
-    padding: 4px 20px;
+    padding: 7px 4%;
+    margin: 0 -17px 15px;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
   }
 }
 
@@ -272,15 +277,15 @@ code {
     height: auto;
     background: #121925;
     content: "JSON";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
-    padding: 7px 14px;
+    padding: 7px 4%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
@@ -297,7 +302,7 @@ code {
 }
 
 .fullscreenbtn {
-  position: absolute;
+  position: relative;
   bottom: 30px;
   right: 42px;
   margin: auto;
@@ -314,7 +319,7 @@ code {
   }
 
   i {
-    position: absolute;
+    position: relative;
     left: 0;
     right: 0;
     bottom: 0;
@@ -340,15 +345,15 @@ code {
     height: auto;
     background: #121925;
     content: "Bash";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
-    padding: 7px 14px;
+    padding: 7px 4%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
@@ -362,15 +367,15 @@ code {
     height: auto;
     background: #121925;
     content: "SQL";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
-    padding: 7px 14px;
+    padding: 7px 4%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
@@ -385,15 +390,15 @@ code {
     height: auto;
     background: #121925;
     content: "Vim";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
-    padding: 7px 14px;
+    padding: 7px 4%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
@@ -407,15 +412,15 @@ code {
     height: auto;
     background: #121925;
     content: "CSS";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
-    padding: 7px 14px;
+    padding: 7px 4%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
@@ -429,15 +434,15 @@ code {
     height: auto;
     background: #121925;
     content: "CSS";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
-    padding: 7px 14px;
+    padding: 7px 4%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
@@ -451,15 +456,15 @@ code {
     height: auto;
     background: #121925;
     content: "ini";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
-    padding: 7px 14px;
+    padding: 7px 4%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
