--- a/src/less/code.less
+++ b/src/less/code.less
@@ -21,7 +21,7 @@ pre {
   }
 
   span {
-    display: block;
+    display: inline;
   }
 }
 
@@ -66,7 +66,7 @@ code {
 .language-python,
 .python.hljs {
   color: #e4f8fd !important;
-  background: #17253F!important;
+  background: #131B2E !important;
 
   &::before {
     width: 100%;
@@ -146,7 +146,7 @@ code {
 }
 
 .hljs.javascript {
-   background-color: #1a332f !important;
+   background-color: #0e2521 !important;
   .hljs-bullet,
   .hljs-link,
   .hljs-selector-id,
@@ -384,7 +384,7 @@ code {
 }
 
 .hljs.vim {
-  background-color: #342142 !important;
+  background-color: #1e192d !important;
   &::before {
     width: 100%;
     height: auto;
