--- a/src/less/code.less
+++ b/src/less/code.less
@@ -61,6 +61,7 @@ code {
   line-height: 1.5;
   white-space: pre-wrap !important;
   color: #d3dce0;
+  padding: 0 20px 20px;
 }
 
 .language-python,
@@ -81,7 +82,7 @@ code {
     position: relative;
     top: 0;
     left: 0;
-    padding: 7px 4%;
+    padding: 7px 2.5%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
@@ -218,7 +219,7 @@ code {
     position: relative;
     top: 0;
     left: 0;
-    padding: 7px 4%;
+    padding: 7px 2.5%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
@@ -285,7 +286,7 @@ code {
     position: relative;
     top: 0;
     left: 0;
-    padding: 7px 4%;
+    padding: 7px 2.5%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
@@ -353,7 +354,7 @@ code {
     position: relative;
     top: 0;
     left: 0;
-    padding: 7px 4%;
+    padding: 7px 2.5%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
@@ -375,7 +376,7 @@ code {
     position: relative;
     top: 0;
     left: 0;
-    padding: 7px 4%;
+    padding: 7px 2.5%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
@@ -398,7 +399,7 @@ code {
     position: relative;
     top: 0;
     left: 0;
-    padding: 7px 4%;
+    padding: 7px 2.5%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
@@ -420,7 +421,7 @@ code {
     position: relative;
     top: 0;
     left: 0;
-    padding: 7px 4%;
+    padding: 7px 2.5%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
@@ -442,7 +443,7 @@ code {
     position: relative;
     top: 0;
     left: 0;
-    padding: 7px 4%;
+    padding: 7px 2.5%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
@@ -464,7 +465,7 @@ code {
     position: relative;
     top: 0;
     left: 0;
-    padding: 7px 4%;
+    padding: 7px 2.5%;
     margin: 0 -17px 15px;
     font-size: 15px;
     font-weight: 600;
