--- a/src/less/code.less
+++ b/src/less/code.less
@@ -21,7 +21,7 @@ pre {
   }
 
   span {
-    display: inline-block;
+    display: inline;
   }
 }
 
@@ -59,6 +59,7 @@ code {
   font-size: 14px;
   font-weight: 200;
   line-height: 1.5;
+      padding: 0 30px 30px;
   white-space: pre-wrap !important;
   color: #d3dce0;
 }
@@ -66,25 +67,23 @@ code {
 .language-python,
 .python.hljs {
   color: #e4f8fd !important;
-  background: #17253F!important;
+  background: #1E2A44!important;
 
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "Python";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    /*
-    margin-left: calc(~"-50vw + 50%") !important;
-    margin-right: calc(~"-50vw + 50%") !important;*/
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
+    margin-left: -28px;
   }
   /*
   &::before  {
@@ -102,7 +101,6 @@ code {
   .hljs-meta-string,
   .hljs-regexp,
   .hljs-string {
-    /*color: #7cdfe4!important;*/
     color: #e4f2ff;
     font-size: 14px;
   }
@@ -111,10 +109,16 @@ code {
     color: #d8b061;
   }
 
+  .hljs-class,
+   .hljs-title{
+    color: #ffd712;
+    font-weight: 700;
+  }
+
+
   .hljs-attr,
   .hljs-number,
   .hljs-selector-attr,
-  .hljs-selector-class,
   .hljs-selector-pseudo,
   .hljs-template-variable,
   .hljs-type,
@@ -136,7 +140,6 @@ code {
     }
   }
   @media(max-width: 600px) {
-    /* padding: 20px; */
     margin-left: calc(~"-50vw + 50%") !important;
     margin-right: calc(~"-50vw + 50%") !important;
     white-space: pre-line !important;
@@ -145,7 +148,7 @@ code {
 }
 
 .hljs.javascript {
-   background-color: #1a332f !important;
+   background-color: #16282b !important;
   .hljs-bullet,
   .hljs-link,
   .hljs-selector-id,
@@ -205,18 +208,19 @@ code {
   }
 
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    margin-left: -28px;
+    width: 110%;
     height: auto;
-    background: #121925;
+    background: #090f10;
     content: "Javascript";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
+    margin-left: -28px;
     padding: 4px 20px;
   }
 }
@@ -268,18 +272,18 @@ code {
   }
 
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "JSON";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
+    margin-left: -28px;
     padding: 4px 20px;
   }
 }
@@ -293,7 +297,7 @@ code {
 }
 
 .fullscreenbtn {
-  position: absolute;
+  position: relative;
   bottom: 30px;
   right: 42px;
   margin: auto;
@@ -310,11 +314,11 @@ code {
   }
 
   i {
-    position: absolute;
-    left: 0;
+    position: relative;
+
     right: 0;
     bottom: 0;
-    top: 0;
+
     margin: auto;
     height: 30px;
     width: 16px;
@@ -327,114 +331,114 @@ code {
 
 .fullscreen {
   height: 100%;
-  width: 100%;
+  width: 110%;
 }
 
 .hljs.bash {
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "Bash";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
   }
 }
 
 .hljs.sql {
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "SQL";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
   }
 }
 
 .hljs.vim {
-  background-color: #342142 !important;
+  background-color: #28283e !important;
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "Vim";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
   }
 }
 
 .hljs.css {
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "CSS";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
   }
 }
 
 .hljs.shell {
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "CSS";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
   }
 }
 
 .hljs.ini {
   &::before {
-    width: 100%;
+  margin-bottom: 11px;
+  margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "ini";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
   }
 }
