--- a/src/less/code.less
+++ b/src/less/code.less
@@ -21,7 +21,7 @@ pre {
   }
 
   span {
-    display: inline-block;
+    display: inline;
   }
 }
 
@@ -70,22 +70,20 @@ code {
   background: #1E2A44!important;
 
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "Python";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    /*
-    margin-left: calc(~"-50vw + 50%") !important;
-    margin-right: calc(~"-50vw + 50%") !important;*/
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
+    margin-left: -28px;
   }
   /*
   &::before  {
@@ -103,7 +101,6 @@ code {
   .hljs-meta-string,
   .hljs-regexp,
   .hljs-string {
-    /*color: #7cdfe4!important;*/
     color: #e4f2ff;
     font-size: 14px;
   }
@@ -112,10 +109,16 @@ code {
     color: #d8b061;
   }
 
+  .hljs-class,
+   .hljs-title{
+    color: #ffd712;
+    font-weight: 700;
+  }
+
+
   .hljs-attr,
   .hljs-number,
   .hljs-selector-attr,
-  .hljs-selector-class,
   .hljs-selector-pseudo,
   .hljs-template-variable,
   .hljs-type,
@@ -137,7 +140,6 @@ code {
     }
   }
   @media(max-width: 600px) {
-    /* padding: 20px; */
     margin-left: calc(~"-50vw + 50%") !important;
     margin-right: calc(~"-50vw + 50%") !important;
     white-space: pre-line !important;
@@ -206,18 +208,19 @@ code {
   }
 
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #090f10;
     content: "Javascript";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
+    margin-left: -28px;
     padding: 4px 20px;
   }
 }
@@ -269,18 +272,18 @@ code {
   }
 
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "JSON";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
+    margin-left: -28px;
     padding: 4px 20px;
   }
 }
@@ -294,7 +297,7 @@ code {
 }
 
 .fullscreenbtn {
-  position: absolute;
+  position: relative;
   bottom: 30px;
   right: 42px;
   margin: auto;
@@ -311,11 +314,11 @@ code {
   }
 
   i {
-    position: absolute;
-    left: 0;
+    position: relative;
+
     right: 0;
     bottom: 0;
-    top: 0;
+
     margin: auto;
     height: 30px;
     width: 16px;
@@ -328,41 +331,41 @@ code {
 
 .fullscreen {
   height: 100%;
-  width: 100%;
+  width: 110%;
 }
 
 .hljs.bash {
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "Bash";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
   }
 }
 
 .hljs.sql {
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "SQL";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
   }
 }
@@ -370,72 +373,72 @@ code {
 .hljs.vim {
   background-color: #28283e !important;
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "Vim";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
   }
 }
 
 .hljs.css {
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "CSS";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
   }
 }
 
 .hljs.shell {
   &::before {
-    width: 100%;
+    margin-bottom: 11px;
+    margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "CSS";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
   }
 }
 
 .hljs.ini {
   &::before {
-    width: 100%;
+  margin-bottom: 11px;
+  margin-left: -28px;
+    width: 110%;
     height: auto;
     background: #121925;
     content: "ini";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
   }
 }
