--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -63,7 +63,7 @@ $(document).ready(function(){
     });
 
     stichClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(() =>
-      db.collection('jira').find({status: 'To Do', issuetype: { $in: ['Task', 'Story', 'Integration', 'Bug', 'Data', 'Content']}}, { limit: 6}).asArray()
+      db.collection('jira').find({status: 'To Do', issuetype: { $in: ['Task', 'Story', 'Integration', 'Bug', 'Data', 'Story', 'Idea', 'Content']}}, { limit: 6}).asArray()
     ).then(docs => {
         console.log("Found docs", docs)
         populateCards(docs, 'todo')
@@ -72,7 +72,7 @@ $(document).ready(function(){
     });
 
     stichClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(() =>
-      db.collection('jira').find({status: 'In Progress', issuetype: { $in: ['Task', 'Story', 'Integration', 'Bug', 'Content', 'Data']}}, { limit: 6}).asArray()
+      db.collection('jira').find({status: 'In Progress', issuetype: { $in: ['Task', 'Story', 'Integration', 'Bug', 'Content', 'Integration', 'Story', 'Idea', 'Data']}}, { limit: 6}).asArray()
     ).then(docs => {
         console.log("Found docs", docs)
         populateCards(docs, 'progress')
