--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -131,8 +131,7 @@
       border-radius: 5px;
       box-shadow: 2px 3px 4px rgba(58, 59, 103, 0.1);
       overflow: hidden;
-      width: 94%;
-      margin: 0 3% 50px;
+
 
       &.b {
         &::before {
@@ -190,8 +189,8 @@
         /*max-width: 90%;*/
       }
       @media(max-width: 600px) {
-        min-width: auto;
-        /*max-width: 90%;*/
+        margin: 0 5vw 50px;
+        max-width: 90%;
       }
 
       h2 {
