--- a/src/less/code.less
+++ b/src/less/code.less
@@ -59,9 +59,17 @@ code {
   font-size: 14px;
   font-weight: 200;
   line-height: 1.5;
-      padding: 0 30px 30px;
+  padding: 0 30px 30px;
   white-space: pre-wrap !important;
   color: #d3dce0;
+
+  * {
+    font-size: 14px;
+    font-family: 'DroidSansMonoSlashed', "anonymous-pro", monospace, serif;
+    @media(max-width: 600px) {
+      font-size: 12px;
+    }
+  }
 }
 
 .language-python,
@@ -71,7 +79,7 @@ code {
 
   &::before {
     margin-bottom: 11px;
-    margin-left: -28px;
+    margin-left: -40px;
     width: 110%;
     height: auto;
     background: #121925;
@@ -82,8 +90,9 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 4px 20px;
-    margin-left: -28px;
+    padding: 8px 20px;
+    margin-left: -40px;
+    font-weight: 700;
   }
   /*
   &::before  {
@@ -102,7 +111,6 @@ code {
   .hljs-regexp,
   .hljs-string {
     color: #e4f2ff;
-    font-size: 14px;
   }
 
   .hljs-attribute {
@@ -110,11 +118,10 @@ code {
   }
 
   .hljs-class,
-   .hljs-title{
+  .hljs-title {
     color: #ffd712;
     font-weight: 700;
   }
-
 
   .hljs-attr,
   .hljs-number,
@@ -131,24 +138,11 @@ code {
       color: #d667c1;
     }
   }
-
-  * {
-    font-size: 14px;
-    font-family: 'DroidSansMonoSlashed', "anonymous-pro", monospace, serif;
-    @media(max-width: 600px) {
-      font-size: 12px;
-    }
-  }
-  @media(max-width: 600px) {
-    margin-left: calc(~"-50vw + 50%") !important;
-    margin-right: calc(~"-50vw + 50%") !important;
-    white-space: pre-line !important;
-    font-size: 12px;
-  }
 }
 
 .hljs.javascript {
-   background-color: #16282b !important;
+  background-color: #16282b !important;
+
   .hljs-bullet,
   .hljs-link,
   .hljs-selector-id,
@@ -185,7 +179,6 @@ code {
   .hljs-regexp,
   .hljs-string {
     color: #82b7ec!important;
-    font-size: 13px;
   }
 
   .hljs-keyword {
@@ -209,7 +202,7 @@ code {
 
   &::before {
     margin-bottom: 11px;
-    margin-left: -28px;
+    margin-left: -40px;
     width: 110%;
     height: auto;
     background: #090f10;
@@ -220,14 +213,14 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    margin-left: -28px;
-    padding: 4px 20px;
+    margin-left: -40px;
+    padding: 8px 20px;
+    font-weight: 700;
   }
 }
 
 code {
   padding: 4px 5px;
-  font-size: 13px;
   color: #2e9eb7;
   margin: 0;
 }
@@ -283,8 +276,9 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    margin-left: -28px;
-    padding: 4px 20px;
+    margin-left: -40px;
+    padding: 8px 20px;
+    font-weight: 700;
   }
 }
 
@@ -297,9 +291,9 @@ code {
 }
 
 .fullscreenbtn {
-  position: relative;
-  bottom: 30px;
-  right: 42px;
+  position: absolute;
+  bottom: 13px;
+  right: 23px;
   margin: auto;
   font-size: 30px;
   width: fit-content;
@@ -315,10 +309,8 @@ code {
 
   i {
     position: relative;
-
     right: 0;
     bottom: 0;
-
     margin: auto;
     height: 30px;
     width: 16px;
@@ -337,7 +329,7 @@ code {
 .hljs.bash {
   &::before {
     margin-bottom: 11px;
-    margin-left: -28px;
+    margin-left: -40px;
     width: 110%;
     height: auto;
     background: #121925;
@@ -348,14 +340,15 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 4px 20px;
+    padding: 8px 20px;
+    font-weight: 700;
   }
 }
 
 .hljs.sql {
   &::before {
     margin-bottom: 11px;
-    margin-left: -28px;
+    margin-left: -40px;
     width: 110%;
     height: auto;
     background: #121925;
@@ -366,15 +359,17 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 4px 20px;
+    padding: 8px 20px;
+    font-weight: 700;
   }
 }
 
 .hljs.vim {
   background-color: #28283e !important;
+
   &::before {
     margin-bottom: 11px;
-    margin-left: -28px;
+    margin-left: -40px;
     width: 110%;
     height: auto;
     background: #121925;
@@ -385,14 +380,15 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 4px 20px;
+    padding: 8px 20px;
+    font-weight: 700;
   }
 }
 
 .hljs.css {
   &::before {
     margin-bottom: 11px;
-    margin-left: -28px;
+    margin-left: -40px;
     width: 110%;
     height: auto;
     background: #121925;
@@ -403,14 +399,15 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 4px 20px;
+    padding: 8px 20px;
+    font-weight: 700;
   }
 }
 
 .hljs.shell {
   &::before {
     margin-bottom: 11px;
-    margin-left: -28px;
+    margin-left: -40px;
     width: 110%;
     height: auto;
     background: #121925;
@@ -421,14 +418,15 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 4px 20px;
+    padding: 8px 20px;
+    font-weight: 700;
   }
 }
 
 .hljs.ini {
   &::before {
-  margin-bottom: 11px;
-  margin-left: -28px;
+    margin-bottom: 11px;
+    margin-left: -40px;
     width: 110%;
     height: auto;
     background: #121925;
@@ -439,6 +437,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 4px 20px;
+    padding: 8px 20px;
+    font-weight: 700;
   }
 }
