--- a/src/less/post.less
+++ b/src/less/post.less
@@ -15,7 +15,7 @@
 		}
 
 		article {
-			margin: 4vw auto 0;
+			margin: 5vw auto 0;
 			box-shadow: @shadow-color;
 
 			@media(max-width: 800px) {
@@ -41,7 +41,7 @@
 		line-height: 1.05;
 		display: block;
 		font-family: CompassSans-Medium !important;
-		font-size: 2.2em;
+		font-size: 2.5em;
 		font-weight: 500;
 		color: @h1-color;
 
@@ -83,7 +83,7 @@
 			font-weight: 600;
 		}
 		@media(max-width: 600px) {
-			font-size: 1em;
+			font-size: em;
 			line-height: 1.3;
 			max-width: 95%;
 			text-align: center;
@@ -131,6 +131,8 @@
 		}
 		@media(max-width: 600px) {
 			font-size: 1.15em;
+	    text-align: center;
+	    line-height: 1.4;
 		}
 	}
 
@@ -179,15 +181,13 @@
 	}
 
 	.post-meta {
-		margin: auto 80px 30px;
+		margin: auto 80px 50px;
 		color: #40627b;
 		font-size: 12px;
 		display: flex;
 		width: auto;
 		align-items: center;
 		justify-content: flex-start;
-		border-bottom: 1px solid #dfe5ec;
-		padding: 0 0 20px;
 
 		@media(max-width: 800px) {
 			margin: auto 40px 30px;
@@ -196,11 +196,12 @@
 		@media(max-width: 600px) {
 			display: flex;
 			justify-content: space-between;
-			padding: 0 0 15px 0;
+			padding: 0;
 			max-width: none;
 			width: auto;
-			margin: 0 30px !important;
+			margin: 0 18px !important;
 			padding-top: 0;
+			justify-content: space-around;
 		}
 
 		span {
@@ -248,7 +249,7 @@
 				height: 30px;
 				display: inline-block;
 				margin-right: 10px;
-				border-radius: 1px;
+				border-radius: 50%;
 				@media(max-width: 600px) {
 					width: 25px;
 					height: 25px;
@@ -451,7 +452,6 @@
 			position: relative;
 			cellspacing: 0;
 			overflow: hidden;
-			/* sort out borders */
 			@media (max-width: 600px) {
 				margin-left: calc(~"-50vw + 50%") !important;
 				margin-right: calc(~"-50vw + 50%") !important;
@@ -577,7 +577,7 @@
 			border-radius: 3px;
 			width: 100%;
 			font-size: 13px;
-			border: 1px solid #c5ceda;
+			border: 1px solid #e5e9ef;
 			border-spacing: 0;
 			@media(max-width: 600px) {
 				margin-left: calc(~"-50vw + 50%") !important;
@@ -590,11 +590,6 @@
 				padding: 10px 5px;
 				font-weight: 500;
 				font-size: 12px;
-			}
-
-			tbody th {
-				width: 60px;
-    		max-width: 60px;
 			}
 
 			td,
@@ -686,7 +681,7 @@
 		}
 		@media(max-width: 600px) {
 			margin: 0 15px;
-			padding: 20px 0;
+			padding: 20px 0 30px;
 			border-bottom: 0;
 		}
 	}
@@ -731,7 +726,7 @@
 		}
 
 		pre > code {
-			background-color: #202538;
+			background-color: #1c1c2b;
 		}
 
 		p {
@@ -789,30 +784,23 @@
 
 	figcaption {
 		text-align: center;
-    margin: 0 auto 40px;
-    font-size: 15px;
-    color: #757575;
-    white-space: nowrap;
-    font-style: italic;
-    background-color: rgba(33, 69, 138, 0.04);
-    color: #4e5261;
-    padding: 10px;
-    margin-top: -10px;
+		margin: 0 auto 40px;
+		font-size: 15px;
+		color: #757575;
+		white-space: nowrap;
+		font-style: italic;
 		@media(max-width: 600px) {
 			margin: 0 auto 70px;
 			font-size: 14px;
 			padding: 0;
-			height: auto;
+			height: 0;
 			line-height: 4;
-			padding: 10px;
+			padding-top: 20px;
 			line-height: 1.5;
 			width: 83%;
 			display: block;
 			white-space: normal;
 			color: #54537d;
-			margin-left: calc(~"-50vw + 50%") !important;
-			margin-right: calc(~"-50vw + 50%") !important;
-			width: auto!important;
 		}
 	}
 
@@ -895,7 +883,7 @@
 			}
 
 			li {
-				display: block;
+				display: inline-block;
 				 font-style: normal;
 				 font-variant: normal;
 				 text-rendering: auto;
@@ -939,7 +927,7 @@
 		}
 
 		.kg-width-wide {
-			max-height: 550px;
+			max-height: 650px;
 			border: 1px solid #eaeaea;
 			margin: 10px auto;
 			display: block;
@@ -990,7 +978,7 @@
 		.material-placeholder,
 		figure {
 			width: fit-content;
-			margin: 40px auto 0;
+			margin: 40px auto 20px;
 
 			img {
 				max-width: 100%;
@@ -1049,11 +1037,12 @@
 			width: 90px;
 			height: 90px;
 			display: inline-block;
+			border-radius: 50%;
 			overflow: hidden;
 			margin-right: 30px;
+			.border-radius(50%);
 			margin-bottom: 20px;
 			float: left;
-			border-radius: 0;
 			@media(max-width: 600px) {
 				width: 80px;
 				height: 80px;
