--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -22,7 +22,7 @@
 		}
 
 		p:first-child {
-			display: -webkit-box !important;
+			display: -webkit-box;
 			overflow: hidden;
 			-webkit-line-clamp: 7;
 			-webkit-box-orient: vertical;
@@ -30,9 +30,7 @@
 			line-height: 1.5em;
 			font-size: 1em;
 			font-weight: 500;
-			color: #4D4146;
-			text-overflow: ellipsis;
-
+			color: #2d2f35;
 			@media(max-width: 600px) {
 				font-size: 0.9em;
 				line-height: 1.6em;
@@ -96,7 +94,7 @@
 			font-weight: 500;
 			text-align: left;
 			font-size: 1.3em;
-			color: #40464F;
+			color: #404146;
 			font-family: 'CompassSans-Regular', AvenirNextLTPro-Regular,serif;
 			@media(max-width: 800px) {
 				font-size: 1.18em;
@@ -155,7 +153,7 @@
 		width: 100%;
 		padding-right: 50px;
 		justify-content: space-between;
-		max-width: 470px;
+		max-width: 500px;
 		@media(max-width:600) {
 			width: auto;
 			padding: 0;
@@ -172,14 +170,13 @@
 		.author-mobile {
 			display: none;
 			align-items: center;
-			margin-right:20px;
 
 			span {
 				text-transform: capitalize;
 				line-height: 1;
 				font-size: 1em;
 				font-family: 'CompassSans-Regular','AvenirNextLTPro-Medium';
-				color: #475c6d;
+				color: #224a69;
 			}
 			@media (max-width: 900px) {
 				display: flex;
@@ -283,7 +280,7 @@
 			height: 30px;
 			display: inline-block;
 			margin-right: 10px;
- 		  border-radius: 1px;
+
 			@media(max-width: 600px) {
 				margin-right: 15px;
 			}
@@ -321,31 +318,26 @@
 	}
 
 	.btn {
-		font-size: 18px;
-    font-family: 'CompassSans-Medium';
-    text-transform: uppercase;
-    padding: 16px 30px;
-    line-height: 1;
-    height: 15px;
-    letter-spacing: 1px;
+		font-size: 16px;
+		font-family: 'AvenirNextLTPro-Medium',serif;
+		text-transform: uppercase;
+		padding: 14px 20px;
+		line-height: 1;
+		height: 14px;
 		background: @button-color;
 		border-bottom: 1px solid #009c83;
 		border-right: 2px solid #009c83;
 		transition: all .3s ease-out;
 
 		&:hover {
+
 			border-bottom: 1px solid #00309c;
 			border-right: 2px solid #004d9c;
 		}
 
 		@media(max-width: 600px) {
 			padding: 13px 18px;
-			font-size: 16px;
-
-			&:hover {
-				border-bottom: 1px solid #00309c;
-				border-right: 2px solid #004d9c;
-			}
+			font-family: AvenirNextLTPro-Regular,serif;
 		}
 	}
 }
