--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -25,15 +25,53 @@
 @import 'social.less';
 @import 'swiper.less';
 @import 'transactional.less';
-@import 'fonts.less';
-@import 'cover.less';
+@import 'modal.less';
 
 /*====================================================
 	about author and comment and next-prev link
 ====================================================*/
 
 
+/*====================================================
+	Tag page & author page cover
+====================================================*/
 
+.cover {
+	text-align: center;
+	background: @white;
+	padding: 25px;
+	margin-bottom: 20px;
+	min-width: -webkit-fill-available;
+
+	.post-count {
+		color: @text-color-light;
+	}
+
+	h3 {
+		margin-bottom: 10px;
+	}
+
+	.avatar {
+		width: 100px;
+		height: 100px;
+		.border-radius(50%);
+	}
+
+	.meta-info {
+		color: @text-color-light;
+
+		span {
+			margin: 0 7px;
+
+			i {
+				margin-right: 7px;
+			}
+			@media(max-width: 600px) {
+				display: block;
+			}
+		}
+	}
+}
 
 /*====================================================
 	tag and author archive
