--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -6,7 +6,15 @@
 .paged,
 .tag-template {
   .tag-name {
-    font-size: 1.2em;
+    font-size: 1.7em;
+    margin-top:0;
+
+
+    i {
+      font-size: .8em;
+      margin-right: 5px;
+      font-weight: 100;
+		}
   }
 
   .main-header {
@@ -252,7 +260,6 @@
           display: inline;
         }
         @media(max-width: 600px) {
-          margin: 0 0 3px;
           display: block !important;
           width: 100%;
         }
@@ -270,11 +277,10 @@
   }
 
   p {
-    font-size: 1em;
+    font-size: 14px;
     color: #505050;
     margin: 0 auto;
     font-weight: 100;
-    line-height: 2;
   }
 
   .tag-wrapper {
@@ -389,7 +395,7 @@
       align-items: left;
       height: fit-content;
       flex-direction: column;
-      min-height: 78px;
+      min-height: 61px;
 
       h2 {
         color: #37363e;
@@ -402,17 +408,15 @@
 
       p {
         font-size: 14px;
-        color: #2f2f2f;
+        color: @text-color;
         margin: 5px 0;
-        line-height: 1.3;
+        line-height: 1.2;
         text-align: left;
         font-weight: 100;
         font-family: AvenirNextLTPro-Light;
       }
 
       span {
-        position: absolute;
-        bottom: 15px;
         font-size: 0.7em;
         line-height: 1.5;
         color: #37363F;
