--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -21,7 +21,7 @@
 	@media(max-width: 600px) {
 		margin-top: 10px;
 		display: block;
-		padding: 40px;
+		padding: 30px;
 	}
 
 	.widget {
@@ -50,7 +50,7 @@
 		.title {
 			color: @white;
 			font-weight: 800;
-			margin: 10px 0 30px!important;
+			margin: 10px 0 15px !important;
 			font-size: 1.5em;
 		}
 
@@ -138,8 +138,8 @@
 					font-size: 16px;
 					margin: 0;
 					line-height: 1.4;
-					font-family: CompassSans-Regular,sans-serif!important;
-    			font-weight: 600;
+					font-family: AvenirNextLTPro-Regular,sans-serif !important;
+					font-weight: 500;
 					display: block;
 
 					&:hover {
