--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -2,6 +2,13 @@
 @import "mixin.less";
 @import "fonts.less";
 
+.tag-template {
+  .tag-image {
+    width: 100%;
+    height: 370px;
+    background-size: cover !important;
+  }
+}
 
 .meta-item {
   display: flex;
@@ -92,8 +99,8 @@
   }
 
   .data {
-    color: #009279!important;
-    background-color:  #d7efea;
+    color: #1cccae !important;
+    background-color: lighten(#1cccae, 50%);
 
     * {
       color: #1cccae !important;
@@ -102,7 +109,7 @@
 
   .roundup {
     color: #666fa5 !important;
-    background-color: #e0e5ec;
+    background-color: lighten(#666fa5, 40%);
 
     * {
       color: #666fa5 !important;
@@ -128,11 +135,11 @@
   }
 
   .pandas {
-    color: #924c7c !important;
-    background-color: #f5e3ee;
+    color: #c03694 !important;
+    background-color: lighten(#c03694, 50%);
 
     * {
-      color: #924c7c !important;
+      color: #c03694 !important;
     }
   }
 
@@ -229,20 +236,11 @@
   }
 
   .javascript {
-    background: #fff5cb;
+    background: #fff2be;
     color: #ad8303 !important;
 
     * {
       color: #ad8303 !important;
-    }
-  }
-
-  .sql {
-    background: #e4e1ea;
-    color: #6a497b !important;
-
-    * {
-      color: #6a497b !important;
     }
   }
 
