--- a/src/less/code.less
+++ b/src/less/code.less
@@ -67,7 +67,7 @@ code {
 .language-python,
 .python.hljs {
   color: #e4f8fd !important;
-  background: #1E2A44!important;
+  background: #222b3f!important;
 
   &::before {
     margin-bottom: 11px;
@@ -358,7 +358,7 @@ code {
     margin-left: -28px;
     width: 110%;
     height: auto;
-    background: #121925;
+    background: #29263e;
     content: "SQL";
     display: block;
     font-style: normal;
