--- a/src/less/code.less
+++ b/src/less/code.less
@@ -75,7 +75,7 @@ code {
 .language-python,
 .python.hljs {
   color: #e4f8fd !important;
-  background: #1E2A44!important;
+  background: #262f44!important;
 
   &::before {
     margin-bottom: 11px;
@@ -110,7 +110,7 @@ code {
   .hljs-meta-string,
   .hljs-regexp,
   .hljs-string {
-    color: #e4f2ff;
+    color: #ecd36e;
   }
 
   .hljs-attribute {
@@ -141,7 +141,7 @@ code {
 }
 
 .hljs.javascript {
-  background-color: #16282b !important;
+  background-color: ##1c2527 !important;
 
   .hljs-bullet,
   .hljs-link,
@@ -346,6 +346,7 @@ code {
 }
 
 .hljs.sql {
+  background: #343444 !important;
   &::before {
     margin-bottom: 11px;
     margin-left: -40px;
