--- a/src/less/code.less
+++ b/src/less/code.less
@@ -141,7 +141,7 @@ code {
 }
 
 .hljs.javascript {
-  background-color: ##1c2527 !important;
+  background-color: #1c2527 !important;
 
   .hljs-bullet,
   .hljs-link,
