--- a/src/less/post.less
+++ b/src/less/post.less
@@ -79,11 +79,11 @@
 			margin: 10px auto 0;
 			font-size: 1.2em;
 			line-height: 1.2;
-			font-family: AvenirNextLTPro-Regular,serif;
-			font-weight: 600;
+    			font-family: CompassSans-Regular;
+    			font-weight: 500;
 		}
 		@media(max-width: 600px) {
-			font-size: em;
+			font-size: 1.1em;
 			line-height: 1.3;
 			max-width: 95%;
 			text-align: center;
@@ -304,6 +304,12 @@
 
 			&.readtime {
 				@media(max-width: 850px) {
+					display: none;
+				}
+			}
+			
+			&.date {
+				@media(max-width: 500px) {
 					display: none;
 				}
 			}
@@ -964,7 +970,7 @@
 		}
 
 		img {
-			max-height: 550px;
+			max-height: 650px;
 			border: 1px solid #eaeaea;
 			margin: 10px auto;
 			display: block;
