--- a/src/less/post.less
+++ b/src/less/post.less
@@ -106,7 +106,8 @@
 			padding-bottom: 9px;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.4em;
+			font-size: 1.5em;
+    			margin-bottom: 0;
 			margin-left: calc(~"-50vw + 50%");
 			margin-right: calc(~"-50vw + 50%");
 			width: auto !important;
@@ -130,9 +131,9 @@
 			font-size: 1.3em;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.15em;
-	    text-align: center;
-	    line-height: 1.4;
+			font-size: 1.1em;
+	    		text-align: center;
+	    		line-height: 1.4;
 		}
 	}
 
@@ -202,6 +203,11 @@
 			margin: 0 18px !important;
 			padding-top: 0;
 			justify-content: space-around;
+		}
+		
+		@media(max-width: 500px){
+			margin: 0 35px!important;
+			justify-content: space-between;
 		}
 
 		span {
