--- a/src/less/post.less
+++ b/src/less/post.less
@@ -8,7 +8,6 @@
 	.container {
 		padding: 0;
 		max-width: 1000px !important;
-
 		@media(max-width: 800px) {
 			margin: 0 0 20px 0 !important;
 			width: 100% !important;
@@ -17,7 +16,6 @@
 		article {
 			margin: 5vw auto 0;
 			box-shadow: @shadow-color;
-
 			@media(max-width: 800px) {
 				margin: 0;
 			}
@@ -44,17 +42,16 @@
 		font-size: 2.5em;
 		font-weight: 500;
 		color: @h1-color;
-
 		@media(max-width: 800px) {
 			font-weight: 500;
 			font-size: 2em;
 			white-space: normal;
 			text-align: left !important;
 		}
-
 		@media(max-width: 600px) {
-			text-align: center !important;
-			 font-size: 1.5em;
+			font-size: 1.7em;
+			max-width: 95%;
+			margin: auto;
 		}
 
 		a {
@@ -74,19 +71,18 @@
 		margin-bottom: 0;
 		line-height: 1.2;
 		color: @h1-color;
-
+		font-family: CompassSans-Regular;
 		@media(max-width: 800px) {
 			margin: 10px auto 0;
 			font-size: 1.2em;
 			line-height: 1.2;
-    			font-family: CompassSans-Regular;
-    			font-weight: 500;
+			font-weight: 600;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.1em;
+			font-size: em;
 			line-height: 1.3;
 			max-width: 95%;
-			text-align: center;
+			font-weight: 500;
 		}
 	}
 
@@ -106,8 +102,7 @@
 			padding-bottom: 9px;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.5em;
-    			margin-bottom: 0;
+			font-size: 1.4em;
 			margin-left: calc(~"-50vw + 50%");
 			margin-right: calc(~"-50vw + 50%");
 			width: auto !important;
@@ -131,9 +126,9 @@
 			font-size: 1.3em;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.1em;
-	    		text-align: center;
-	    		line-height: 1.4;
+			font-size: 1.15em;
+			text-align: center;
+			line-height: 1.4;
 		}
 	}
 
@@ -163,17 +158,11 @@
 		}
 	}
 
-	.kg-gallery-container {
+	.kg-gallery-container {}
 
-	}
+	.kg-gallery-row {}
 
-	.kg-gallery-row {
-
-	}
-
-	.kg-gallery-image {
-
-	}
+	.kg-gallery-image {}
 
 	.main-header,
 	.main-navigation,
@@ -181,162 +170,7 @@
 		display: none;
 	}
 
-	.post-meta {
-		margin: auto 80px 50px;
-		color: #40627b;
-		font-size: 12px;
-		display: flex;
-		width: auto;
-		align-items: center;
-		justify-content: flex-start;
 
-		@media(max-width: 800px) {
-			margin: auto 40px 30px;
-		}
-
-		@media(max-width: 600px) {
-			display: flex;
-			justify-content: space-between;
-			padding: 0;
-			max-width: none;
-			width: auto;
-			margin: 0 18px !important;
-			padding-top: 0;
-			justify-content: space-around;
-		}
-		
-		@media(max-width: 500px){
-			margin: 0 35px!important;
-			justify-content: space-between;
-		}
-
-		span {
-			font-family: 'CompassSans-Regular', AvenirNextLTPro-Regular,sans-serif !important;
-			font-weight: 500;
-		}
-
-		.tags {
-			padding: 6px 12px;
-			height: 25px;
-
-			i,
-			span {
-				font-weight: 500 !important;
-				font-size: 1em !important;
-			}
-
-			&.codesnippetcorner {
-				i {
-					@media(max-width: 600px) {
-						display: none;
-					}
-				}
-			}
-			@media(max-width: 500px) {
-				font-size: 0.9em;
-				height: 24px;
-
-				span {
-					font-weight: 500;
-					font-size: 0.9em !important;
-				}
-
-				i {
-					font-weight: 500;
-					font-size: 0.9em !important;
-				}
-			}
-		}
-
-		.author {
-
-			.avi {
-				width: 30px;
-				height: 30px;
-				display: inline-block;
-				margin-right: 10px;
-				border-radius: 50%;
-				@media(max-width: 600px) {
-					width: 25px;
-					height: 25px;
-				}
-			}
-
-			span {
-				text-transform: capitalize;
-				color: #467192;
-			}
-		}
-
-		.meta-item {
-			margin: 0 50px 0 0;
-			float: left;
-			font-size: 1.2em;
-			display: flex;
-			align-items: center;
-			text-transform: capitalize;
-			line-height: 1;
-			@media(max-width: 600px) {
-				margin: 0 !important;
-			}
-
-			* {
-				font-size: 1.1em;
-				color: #40627b;
-				padding: 0;
-				font-weight: 200;
-				@media(max-width: 600px) {
-					font-size: 1.1em;
-				}
-			}
-
-			&.desktop {
-				display: flex;
-				@media(max-width: 600px) {
-					display: none;
-				}
-			}
-
-			&.mobile {
-				display: none;
-				@media(max-width: 600px) {
-					display: flex;
-				}
-			}
-
-			i {
-				margin-right: 10px;
-			}
-
-			&.readtime {
-				@media(max-width: 850px) {
-					display: none;
-				}
-			}
-			
-			&.date {
-				@media(max-width: 500px) {
-					display: none;
-				}
-			}
-
-			a {
-				text-decoration: none;
-
-				&:hover {
-					color: @hover-color;
-
-					& > span {
-						color: @hover-color !important;
-					}
-				}
-			}
-
-			&:last-child {
-				margin: 0;
-			}
-		}
-	}
 
 	.post-roundup-blurb {
 		padding: 10px 40px;
@@ -351,10 +185,7 @@
 		border-bottom: 0;
 		border-left: 5px solid #7daf8a;
 		background: #ecf1ec;
-
-
 		@media(max-width: 600px) {
-			padding: 20px 0;
 			padding: 15px 20px;
 			margin: 25px 30px 30px;
 			width: auto;
@@ -362,8 +193,8 @@
 
 		i {
 			font-size: 37px;
-	    margin-right: 25px;
-	    color: #7daf8a;
+			margin-right: 25px;
+			color: #7daf8a;
 		}
 
 		.blurb-icon {
@@ -686,13 +517,158 @@
 	}
 
 	.post-head {
-		padding: 30px 0;
+		padding: 20px 0;
 		margin: 0 80px;
+
+		.post-meta {
+			margin: 0 0 15px 0;
+			color: #40627b;
+			font-size: 12px;
+			display: flex;
+			width: auto;
+			align-items: center;
+			justify-content: left;
+
+			@media(max-width: 600px) {
+				padding: 0;
+				max-width: none;
+				width: auto;
+				margin: 0 10px 13px;
+				padding-top: 0;
+			}
+
+			span {
+				font-family: 'CompassSans-Regular', AvenirNextLTPro-Regular,sans-serif !important;
+				font-weight: 500;
+			}
+
+			.tags {
+				height: 18px !important;
+				padding: 6px 10px;
+				@media(max-width: 600px) {
+ 				 height: 18px !important;
+				 padding: 6px 10px;
+ 			 }
+
+				i,
+				span {
+					font-weight: 500 !important;
+					font-size: 1em !important;
+				}
+
+				&.codesnippetcorner {
+					i {
+						@media(max-width: 600px) {
+							display: none;
+						}
+					}
+				}
+				@media(max-width: 500px) {
+					font-size: 0.9em;
+					height: 24px;
+
+					span {
+						font-weight: 500;
+						font-size: 0.9em !important;
+					}
+
+					i {
+						font-weight: 500;
+						font-size: 0.9em !important;
+					}
+				}
+			}
+
+			.author {
+				.avi {
+					width: 26px;
+					height: 26px;
+					display: inline-block;
+					margin-right: 10px;
+				}
+
+				span {
+					text-transform: capitalize;
+					color: #467192;
+				}
+			}
+
+			.meta-item {
+				margin: 0 50px 0 0;
+				float: left;
+				font-size: 1em;
+				display: flex;
+				align-items: center;
+				text-transform: capitalize;
+				line-height: 1;
+				@media(max-width: 600px) {
+					 margin: 0 30px 0 0!important;
+				}
+
+				* {
+					font-size: 1.1em;
+					color: #40627b;
+					padding: 0;
+					font-weight: 200;
+					@media(max-width: 600px) {
+						font-size: 1.1em;
+					}
+				}
+
+				&.desktop {
+					display: flex;
+					@media(max-width: 600px) {
+						display: none;
+					}
+				}
+
+				/*&.date {
+					@media(max-width: 600px) {
+						display:none;
+					}
+				}*/
+
+				&.mobile {
+					display: none;
+					@media(max-width: 600px) {
+						display: flex;
+					}
+				}
+
+				i {
+					margin-right: 10px;
+				}
+
+				&.readtime {
+					@media(max-width: 850px) {
+						display: none;
+					}
+				}
+
+				a {
+					text-decoration: none;
+
+					&:hover {
+						color: @hover-color;
+
+						& > span {
+							color: @hover-color !important;
+						}
+					}
+				}
+
+				&:last-child {
+					margin: 0;
+				}
+			}
+		}
+
+
 		@media(max-width: 800px) {
 			margin: 0 40px;
 		}
 		@media(max-width: 600px) {
-			margin: 0 15px;
+			margin: 0 27px;
 			padding: 20px 0 30px;
 			border-bottom: 0;
 		}
@@ -745,7 +721,7 @@
 			margin: 0 0 20px;
 		}
 		@media(max-width: 800px) {
-			margin: 35px 35px 10px;
+			margin: 10px 35px 10px;
 		}
 	}
 
@@ -760,7 +736,6 @@
 				max-width: none;
 			}
 		}
-
 		@media(max-width: 600px) {
 			padding: 0 15px;
 		}
@@ -801,18 +776,25 @@
 		color: #757575;
 		white-space: nowrap;
 		font-style: italic;
+		background-color: rgba(33, 69, 138, 0.04);
+		color: #4e5261;
+		padding: 10px;
+		margin-top: -10px;
 		@media(max-width: 600px) {
 			margin: 0 auto 70px;
 			font-size: 14px;
 			padding: 0;
-			height: 0;
+			height: auto;
 			line-height: 4;
-			padding-top: 20px;
+			padding: 10px;
 			line-height: 1.5;
 			width: 83%;
 			display: block;
 			white-space: normal;
 			color: #54537d;
+			margin-left: calc(~"-50vw + 50%") !important;
+			margin-right: calc(~"-50vw + 50%") !important;
+			width: auto!important;
 		}
 	}
 
@@ -856,12 +838,11 @@
 	.featured-media {
 		line-height: 1;
 		@media(max-width: 800px) {
-			  margin: 40px 40px 0 40px;
+			margin: 40px 40px 0;
 		}
-
-		@media (max-width: 600px){
-			    margin: 20px 20px 0;
-			}
+		@media (max-width: 600px) {
+			margin: 20px 20px 0;
+		}
 
 		img {
 			width: 100%;
@@ -888,7 +869,6 @@
 			margin-left: 15px;
 			padding-left: 0;
 			margin-bottom: 20px;
-
 			@media(max-width:600px) {
 				margin: 0 20px;
 				padding-left: 0;
@@ -896,34 +876,31 @@
 
 			li {
 				display: inline-block;
-				 font-style: normal;
-				 font-variant: normal;
-				 text-rendering: auto;
-				 -webkit-font-smoothing: antialiased;
-				 margin-bottom: 20px;
-				 padding-left: 0;
-				 line-height: 1.6;
+				font-style: normal;
+				font-variant: normal;
+				text-rendering: auto;
+				-webkit-font-smoothing: antialiased;
+				margin-bottom: 15px;
+				padding-left: 0;
+				line-height: 1.6;
+				@media(max-width: 600px) {
+					margin-left: 0;
+				}
 
-				 @media(max-width: 600px) {
-					   margin-left: 0;
-				 }
-
-				 &::before {
-					 color: darken(@theme-color, 5%);
-				  display: inline-block;
-				  font-style: normal;
-				  font-variant: normal;
-				  text-rendering: auto;
-				  -webkit-font-smoothing: antialiased;
+				&::before {
+					color: darken(@theme-color, 5%);
+					display: inline-block;
+					font-style: normal;
+					font-variant: normal;
+					text-rendering: auto;
+					-webkit-font-smoothing: antialiased;
 					font-family: "Font Awesome 5 Pro";
-				  content: "\f101";
+					content: "\f101";
 					font-size: 13px;
 					margin-right: 10px;
 					font-weight: 600;
 				}
 			}
-
-
 		}
 
 		.kg-embed-card {
@@ -1036,7 +1013,7 @@
 		padding: 40px 80px;
 		margin: 20px 0;
 		min-height: 88px;
-		box-shadow: 0 0 5px rgba(80,82,204,.1)!important;;
+		box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
 		@media(max-width: 1000px) {
 			padding: 30px 40px;
 			margin: 20px;
@@ -1052,7 +1029,6 @@
 			border-radius: 50%;
 			overflow: hidden;
 			margin-right: 30px;
-			.border-radius(50%);
 			margin-bottom: 20px;
 			float: left;
 			@media(max-width: 600px) {
@@ -1092,12 +1068,12 @@
 			font-size: 15px;
 		}
 
+
+
 		.author {
 			font-size: 1.5em;
 			margin-bottom: 5px;
 			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light';
-
-
 			@media(max-width: 600px) {
 				font-size: 1.3em;
 			}
