--- a/src/less/code.less
+++ b/src/less/code.less
@@ -110,7 +110,7 @@ code {
   .hljs-meta-string,
   .hljs-regexp,
   .hljs-string {
-    color: #dcce95;
+    color: #93DCB8;
   }
 
   .hljs-attribute {
