--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -20,7 +20,8 @@
 		display: flex;
 		flex-wrap: wrap;
 		align-items: center;
-		 margin-bottom: 20px;
+		margin-bottom: 20px;
+		margin: 20px 0;
 
 		a {
 			color: @text-post-header;
@@ -53,6 +54,7 @@
 		margin: 0 !important;
 		padding-left: 0 !important;
 		width: 500px;
+		height: 100%;
 		@media(max-width:800px) {
 			margin: auto;
 		}
@@ -61,11 +63,13 @@
 			list-style: none;
 			display: flex !important;
 			border: 0;
-			padding: 18px 11px;
+			padding: 10px 11px;
 			transition: 0.2s all ease-out;
 			border-radius: 2px;
 			background: #f3f3f3;
 			color: white;
+			height:15px;
+			margin: auto;
 			@media(max-width:900px) {
 				width: fit-content !important;
 				height: fit-content;
@@ -182,6 +186,7 @@
 		padding-left: 0;
 		min-width: 220px;
 		margin: 0;
+		height:100%;
 		@media(max-width:900px) {
 			max-width: 80%;
 			margin: 15px auto !important;
@@ -217,36 +222,6 @@
 		a {
 			margin: 0 10px 10px !important;
 			color: @theme-color;
-		}
-	}
-}
-
-.container {
-	.postlist {
-		display: flex;
-		justify-content: space-between;
-		flex-direction: column;
-	}
-
-	.main-content {
-		padding-right: 0;
-		padding-left: 0;
-
-		.page-template,
-		.post-page {
-			margin-bottom: 0;
-
-			.post-head {
-				.author,
-				.date {
-					margin: 10px auto 0;
-					display: block;
-				}
-			}
-		}
-
-		.about-author {
-			background: #fff;
 		}
 	}
 }
