--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -21,6 +21,10 @@
           margin: 0 0 60px;
       }
 
+      .post-excerpt {
+        font-size: 1.1em;
+      }
+
       .post-title {
             font-size: 1.5em;
       }
@@ -45,7 +49,8 @@
   .tag-description {
     font-size: 1.1em;
     line-height: 1.5;
-    margin-top: 5px;
+    max-width: 90%;
+    margin: 20px auto 0;
   }
   .tag-image {
     margin-top: 30px;
